# pdeu-conf-chapter-07

./: .env.example  README.md  ap_ledger.db  audit_agent.py  main.py  pyproject.toml  warehouse_receipts_fy26.csv
contracts/: Aurora_LLC_Contract.txt  Balakrishnan-Talwar_Contract.txt  Bali-Kata_Contract.txt  Bhasin,_Narayan_and_Das_Contract.txt  Bhat,_Murthy_and_Bhandari_Contract.txt  Boase,_Bath_and_Kari_Contract.txt  Buch,_Narasimhan_and_Walla_Contract.txt  Chand-Batta_Contract.txt  Chanda_Ltd_Contract.txt  Chander_and_Sons_Contract.txt  Cherian-Sant_Contract.txt  Chopra_PLC_Contract.txt  Contractor,_Gade_and_Mukhopadhyay_Contract.txt  Dave_Ltd_Contract.txt  Dhingra-Konda_Contract.txt  Gokhale,_Tripathi_and_Cherian_Contract.txt  Gujarat_Steel_Corp_Contract.txt  Iyengar_Group_Contract.txt  Kala,_Vaidya_and_Solanki_Contract.txt  Kala_Ltd_Contract.txt  Kale,_Sani_and_Seth_Contract.txt  Kannan_Inc_Contract.txt  Kara,_Virk_and_Rai_Contract.txt  Karpe-Pandey_Contract.txt  Kaur_Group_Contract.txt  Kohli-Divan_Contract.txt  Malhotra_PLC_Contract.txt  Mandal_Ltd_Contract.txt  Mane-Dugar_Contract.txt  Menon_and_Sons_Contract.txt  Modi-Rau_Contract.txt  Morar_LLC_Contract.txt  More,_Rege_and_Narain_Contract.txt  Nair,_Bhalla_and_Karnik_Contract.txt  Pai-Mistry_Contract.txt  Ravel,_Gandhi_and_Sibal_Contract.txt  Reddy,_Chander_and_Kar_Contract.txt  Roy-Sibal_Contract.txt  Sami,_Oak_and_Mall_Contract.txt  Sarin,_Swamy_and_Chand_Contract.txt  (+10 more)
skills/penalty_logic/: SKILL.md
tests/: conftest.py  test_chapter_07.py
